--- a/Frontend/apps/admin/src/app/pages/update-contest/update-contest.component.html
+++ b/Frontend/apps/admin/src/app/pages/update-contest/update-contest.component.html
@@ -22,5 +22,6 @@
   [showModal]="showUpdateContestQuestionModal"
   [contestQuestionResponse]="contestQuestionResponse"
   (closeModal)="closeUpdateModal()"
+  (newData)="updatedContestQuestion($event)"
 >
 </app-update-contest-question>
