--- a/Frontend/apps/learner/src/app/pages/home/home.component.html
+++ b/Frontend/apps/learner/src/app/pages/home/home.component.html
@@ -52,7 +52,7 @@
         </div>
         <button
           class="mt-6 bg-white text-my-purple py-2 px-4 rounded-md hover:bg-my-blue hover:text-white transition-colors"
-          (click)="goTo('/chat-bot')"
+          (click)="goTo('/chatbot')"
         >
           Trò chuyện ngay
         </button>
